Closed Bug 702627 Opened 13 years ago Closed 13 years ago

Flash: queue invalidation after async surface request

Categories

(Firefox for Android Graveyard :: General, defect, P1)

ARM
Android
defect

Tracking

(firefox11 fixed, fennec11+)

RESOLVED FIXED
Tracking Status
firefox11 --- fixed
fennec 11+ ---

People

(Reporter: snorp, Assigned: snorp)

Details

Attachments

(1 file, 1 obsolete file)

With the patch to Bug 702334 applied, we asynchronously request the Java plugin surface during paint (if required). We should invalidate the whole rect in this case since the current paint failed.
Attachment #574595 - Attachment is obsolete: true
Attachment #574596 - Flags: review?(blassey.bugs) → review+
https://hg.mozilla.org/projects/birch/rev/8d659ca1ae0e
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
tracking-fennec: --- → 11+
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in before you can comment on or make changes to this bug.