Bug 702627 - Invalidate plugin rect after requesting Java surface during paint r=blassey