dom/plugins/base/nsPluginInstanceOwner.h
@@ -310,7 +310,7 @@ private:
   
   void FixUpURLS(const nsString &name, nsAString &value);
 #ifdef ANDROID
-  void AddPluginView(const gfxRect& aRect);
+  bool AddPluginView(const gfxRect& aRect);
   void RemovePluginView();
   bool mPluginViewAdded;
   gfxRect mLastPluginRect;
